--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "jsau-webserver",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "src/start.js",
   "scripts": {
     "test": "jest --coverage",
-    "start": "node src/app.js",
+    "start": "node src/start.js",
     "start:watch": "nodemon",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "pretest:ci": "npm run lint",
-    "posttest": "npm run lint",
-    "build": "webpack --mode production"
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
