--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ cache:
   paths:
     - .npm/
 test:
-  image: node:16.17.0
+  image: node:16.17.0-alpine 
   stage: test
   script:
     - npm ci  --cache .npm --prefer-offline --no-audit
